# tachikoma

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-07-completions-and-progress.md  2026-03-10-writable-mounts-and-pr-command-design.md  2026-03-10-writable-mounts-and-pr-command.md
docs/superpowers/plans/: 2026-03-26-issue-14-writable-git.md
examples/: docker-bridge-start.sh  docker-host-forwarding.sh  install-tools.sh
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cmd/: config.rs  destroy.rs  doctor.rs  enter.rs  exec.rs  halt.rs  image.rs  list.rs  mod.rs  pr.rs  proxy.rs  prune.rs  spawn.rs  ssh_config.rs  status.rs  suspend.rs
src/config/: defaults.rs  mod.rs  schema.rs
src/doctor/: mod.rs
src/mcp/: handler.rs  mod.rs  types.rs
src/provision/: credentials.rs  mod.rs  profile.rs
src/proxy/: credentials.rs  mod.rs  server.rs
src/ssh/: mod.rs
src/state/: mod.rs  schema.rs
src/tart/: mod.rs  types.rs
src/vm/: boot.rs  mod.rs
src/worktree/: mod.rs
