[package]
name = "tachikoma"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
fd-lock = "4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libc = "0.2"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockall = "0.13"
insta = "1"
