[package]
name = "tachikoma"
version = "0.2.5"
edition = "2024"
license = "Apache-2.0"
description = "Autonomous VM sandboxes per git worktree on Apple Silicon"
repository = "https://github.com/ClickHouse/tachikoma"
homepage = "https://github.com/ClickHouse/tachikoma"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
fd-lock = "4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libc = "0.2"
base64 = "0.22"
indicatif = "0.18"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockall = "0.13"
insta = "1"
